--- a/PhaseTwo/DOM/manipulateElements/basics/changeFormElements.html
+++ b/PhaseTwo/DOM/manipulateElements/basics/changeFormElements.html
@@ -20,7 +20,7 @@
             input.value = '被点击了';
             // 如果想要某个表单被禁用 不能再点击 使用disabled 我们想要这个按钮 button禁用
             // btn.disabled = true;
-            this.disabled = true;
+            this.disabled = true; // this 指向的是时间函数的调用者 也就是btn
         }
     </script>
 </body>
