Based on DOM book, setup a practice project

--- a/PhaseTwo/DOM/PracticeExample/test.html
+++ b/PhaseTwo/DOM/PracticeExample/test.html
@@ -6,31 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
     <script type="text/javascript" src="showPic.js"></script>
+    <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
 </head>
 <body>
     <h1>Snapshots</h1>
     <ul>
         <li>
-            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-zm9kpy.jpeg" onclick="showPic(this);return false;" title="A fireworks display">
+            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-zm9kpy.jpeg" title="A fireworks display" onclick="showPic(this); return false;">
                 Fireworks
             </a>
         </li>
         <li>
-            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-z86g9v.jpeg" onclick="showPic(this);return false;" title="A cup of black coffee">
+            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-z86g9v.jpeg" title="A cup of black coffee" onclick="showPic(this);return false;">
                 Coffee
             </a>
         </li>
         <li>
-            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-z8wxoo.jpeg" onclick="showPic(this);return false;" title="A red, red rose">
+            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-z8wxoo.jpeg" title="A red, red rose" onclick="showPic(this);return false;">
                 Rose
             </a>
         </li>
         <li>
-            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-x68xvz.jpg" onclick="showPic(this);return false;" title="The famous clock">
+            <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-x68xvz.jpg" title="The famous clock" onclick="showPic(this);return false;">
                 Big Ben
             </a>
         </li>
     </ul>
     <img src="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-x68lov.jpg" alt="my image gallery" id="placeholder">
+    <p id="description">Choose an image.</p>
 </body>
 </html>
