Update for project structure

--- a/PhaseTwo/DOM/PracticeExample/gallery.html
+++ b/PhaseTwo/DOM/PracticeExample/gallery.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Snapshots</h1>
-    <ul>
+    <ul id="imagegallery">
         <li>
             <a href="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-zm9kpy.jpeg" title="A fireworks display" onclick="showPic(this); return false;">
                 Fireworks
@@ -32,7 +32,7 @@
             </a>
         </li>
     </ul>
-    <img src="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-x68lov.jpg" alt="my image gallery" id="placeholder">
+    <img id="placeholder" src="C:\Users\ryanw\OneDrive\Desktop\壁纸\wallhaven-3k6g16.jpg" alt="my image gallery">
     <p id="description">Choose an image.</p>
 </body>
 </html>
