update template string

--- a/PhaseOne/StringsObject/templateString.html
+++ b/PhaseOne/StringsObject/templateString.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <script>
-        let age = 20;
-        document.write(`I am ${age} years old`);
+        // let age = 20;
+        // document.write(`I am ${age} years old`);
+        let uname = prompt("Please enter your name: ");
+        let uage = prompt("Please enter your age: ");
+        document.write(`My name is ${uname}, my age is ${uage}`);
     </script>
 </body>
 </html>
