update folder structure and local storage

--- a/PhaseTwo/BOM/1_BOM/3_5秒自动关闭的广告.html
+++ b/PhaseTwo/BOM/1_BOM/3_5秒自动关闭的广告.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-<img src="./images/ad.png" alt="">
+<img src="images/ad.png" alt="">
 <script>
   const img = document.querySelector('img');
   setTimeout(function() {
