--- a/PhaseTwo/BOM/2_本地存储/1_localStorage.html
+++ b/PhaseTwo/BOM/2_本地存储/1_localStorage.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Title</title>
+  </head>
+  <body>
+    <script>
+      // 1. 要存储一个名字 uname
+      // localStorage.setItem('键', '值')
+      localStorage("uname", "ryan");
+      // 2. 获取方式 都加引号
+      console.log(localStorage.getItem("uname"));
+      // 3. 删除本地存储 只删除名字
+      localStorage.removeItem("uname");
+      // 4. 改
+      localStorage.setItem("uname", "yang");
+
+      // 我要存一个年龄
+      // 本地存储只能存储字符串数据类型
+      localStorage.setItem('age', 18);
+      console.log(localStorage.getItem('age'));
+    </script>
+  </body>
 </html>
