update format in getElements

--- a/2_PhaseTwo/DOM/1_getElements/1_GetElements.html
+++ b/2_PhaseTwo/DOM/1_getElements/1_GetElements.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test page</title>
-    <style>
-
-    </style>
 </head>
 <body>
     <div class="box">123</div>
@@ -30,6 +27,9 @@
         // 2. 选择所有的li
         const lis = document.querySelectorAll('ul li');
         console.log(lis);
+
+        // const liss = document.querySelector('li'); // 选到的是第一个li
+        // console.log(liss);
     </script>
 </body>
 </html>
