--- a/Vue/01_初识Vue/初识Vue.html
+++ b/Vue/01_初识Vue/初识Vue.html
@@ -7,13 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- 1. 想让Vue工作，就必须创建一个Vue实例，且要传入一个配置对象。
+    <!--
+    1. 想让Vue工作，就必须创建一个Vue实例，且要传入一个配置对象。
     2. root容器里的代码依然符合html规范，只不过混入了一些特殊的语法。
-    3. root容器里的代码被称为[Vue模版] -->
+    3. root容器里的代码被称为[Vue模版]
+    4. Vue实例和容器是一一对应的
+    5. 真实开发中只有一个Vue实例，并且会配合着组件一起使用
+    6. {{xxx}}中的xxx要写js表达式，且xxx可以自动读取到data中的所有属性
+    7. 一旦data中的数据发生改变，那么页面中用到该数据的地方也会自动更新
+    -->
 
 
     <div id="root">
-        <h1>Hello, {{name}}</h1>
+        <h1>Hello, {{name.toUpperCase()}}, {{address}}</h1>
     </div>
 
     <script>
@@ -22,7 +28,8 @@
             el: '#root', // el用于指定当前Vue实例为哪个容器服务，值通常为CSS选择器字符串
             // el: document.getElementById('root');
             data: { // data中用于存储数据，数据供el所指定的容器去使用，值我们暂时先写成一个对象。
-                name: 'ryan'
+                name: 'ryan',
+                address: 'Beijing'
             }
         });
 
