update for el and data syntax format

--- a/Vue/04_el与data的两种写法/el与data的两种写法.html
+++ b/Vue/04_el与data的两种写法/el与data的两种写法.html
@@ -42,19 +42,19 @@
             // }
 
             // data的第二种写法: 函数式
-            data: function() {
-                console.log('@@@', this); // 此处的this是vue实例对象
-                return {
-                    name: '尚硅谷'
-                }
-            }
-
-            // data() {
+            // data: function() {
             //     console.log('@@@', this); // 此处的this是vue实例对象
             //     return {
             //         name: '尚硅谷'
             //     }
             // }
+
+            data() {
+                console.log('@@@', this); // 此处的this是vue实例对象
+                return {
+                    name: '尚硅谷'
+                }
+            }
         })
     </script>
   </body>
