--- a/Vue/07_事件处理/3_键盘事件.html
+++ b/Vue/07_事件处理/3_键盘事件.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root">
       <h2>Welcome to {{name}}</h2>
-      <input type="text" placeholder="Press enter prompt input" @keydown.ctrl="showInfo" />
+      <input type="text" placeholder="Press enter prompt input" @keydown.ctr.y="showInfo" />
     </div>
   </body>
   <script>
