--- a/Vue/07_事件处理/2_事件修饰符.html
+++ b/Vue/07_事件处理/2_事件修饰符.html
@@ -33,11 +33,7 @@
     </style>
   </head>
   <body>
-    <!--
-        Vue中的事件修饰符: 
-
-
-    -->
+    <!-- Vue中的事件修饰符: -->
     <div id="root">
       <h2>欢迎来到{{name}}学习</h2>
 
