--- a/Vue/08_计算属性/2_姓名案例_methods实现 copy.html
+++ b/Vue/08_计算属性/2_姓名案例_methods实现 copy.html
@@ -24,6 +24,7 @@
         }, 
         methods: {
             fullName() {
+                console.log('@---fullName');
                 return this.firstName + ' - ' + this.lastName;
             }
         }
