计算属性简写

--- a/Vue/08_计算属性/4_姓名案例_计算属性简写.html
+++ b/Vue/08_计算属性/4_姓名案例_计算属性简写.html
@@ -38,7 +38,7 @@
             //     }
             // }
 
-            // 简写
+            // 简写, 注意: 只考虑读取，不考虑修改的时候才可以使用简写形式，因为它基本就是getter的内容
             // 当作getter用
             fullName:function() {
                 console.log('get被调用了');
