--- a/Vue/09_监视属性/2_天气案例_监视属性.html
+++ b/Vue/09_监视属性/2_天气案例_监视属性.html
@@ -7,39 +7,55 @@
     <title>Document</title>
   </head>
   <body>
+    <!--
+      监视属性watch:
+        1. 当被监视的属性变化时，回调函数(handler)自动自动调用，进行相关操作
+        2. 监视的属性必须存在，才能进行监视！
+        3. 监视的两种写法:
+          (1) new Vue时传入watch配置
+          (2) 通过vm.$watch监视
+    -->
     <div id="root">
-        <h2>Today's weather is {{info}}</h2>
-        <button @click="changeWeather">Change weather</button>
+      <h2>Today's weather is {{info}}</h2>
+      <button @click="changeWeather">Change weather</button>
     </div>
   </body>
   <script>
     Vue.config.productionTip = false;
 
     const vm = new Vue({
-        el: '#root',
-        data: {
-            isHot:true,
+      el: "#root",
+      data: {
+        isHot: true,
+      },
+      computed: {
+        info() {
+          return this.isHot ? "Hot" : "Cold"; // 在这里要加上this，模板里调用isHot可以不用this
         },
-        computed: {
-            info() {
-                return this.isHot ? 'Hot' : 'Cold'; // 在这里要加上this，模板里调用isHot可以不用this
-            }
+      },
+      methods: {
+        changeWeather() {
+          this.isHot = !this.isHot;
         },
-        methods: {
-            changeWeather() {
-                this.isHot = !this.isHot;
-            }
+      },
+      watch: {
+        isHot: {
+          immediate: true, // 初始化时让handler调用一下
+          // handler什么时候调用？当isHot发生改变时
+          handler(newValue, oldValue) {
+            console.log("isHot has been changed", newValue, oldValue);
+          },
+        },
+      },
+    });
 
-        },
-        watch: {
-          isHot: {
-            immediate:true, // 初始化时让handler调用一下
-            // handler什么时候调用？当isHot发生改变时
-            handler(newValue, oldValue) {
-              console.log('isHot has been changed', newValue, oldValue);  
-            }
-          }
-        }
-    })
+    // 另一种写法
+    // vm.$watch("isHot", {
+    //   immediate: true, // 初始化时让handler调用一下
+    //   // handler什么时候调用？当isHot发生改变时
+    //   handler(newValue, oldValue) {
+    //     console.log("isHot has been changed", newValue, oldValue);
+    //   },
+    // });
   </script>
 </html>
