--- a/Vue/06_数据代理/3_Vue中的数据代理.html
+++ b/Vue/06_数据代理/3_Vue中的数据代理.html
@@ -13,7 +13,7 @@
         更加方便的操作data中的数据
     3. 基本原理:
         通过Object.defineProperty()把data对象中所有属性添加到vm上。
-        为每一个添加到vm伤的属性，都制定一个getter/setter
+        为每一个添加到vm上的属性，都制定一个getter/setter
         在getter/setter内部去操作 (读/写) data中对应的属性。
  -->
 <div id="root">
