--- a/React/01_hello_react/hello_react.html
+++ b/React/01_hello_react/hello_react.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello React</title>
+  </head>
+  <body>
+    <div id="test"></div>
+    <!--React核心库-->
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <!--React扩展库-->
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!--引入babel，用于将jsx转为js-->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
+      // 1. 创建虚拟DOM
+      const VDOM = (
+        <h1>Hello, React</h1>
+      ); /* 此处一定不要写引号，因为不是字符串 */
+      
+      // 2. 渲染虚拟DOM到页面
+      //   ReactDOM.render(虚拟DOM, 容器);
+      ReactDOM.render(VDOM, document.getElementById('test'));
+    </script>
+  </body>
 </html>
