复习类的基本知识

--- a/React/复习/1_类的基本知识.html
+++ b/React/复习/1_类的基本知识.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    /*
+      总结: 
+        1. 类中的构造器不是必须写的，要对实例进行一些初始化的操作，如添加指定属性时才写。例如Student类没有constructor也可以使用父类的name和age属性
+        2. 如果A类继承了B类，且A类中写了构造器，那么A类构造器中的super是必须要调用的。
+        3. 类中定义的方法，都是放在了类的原型对象上，供实例使用。
+    */
+
     <script type="text/javascript">
-        // 创建一个Person类
-        class Person {
-            // 构造器函数，用来接住实参
-            constructor(name, age) {
-                // 构造器中的this是谁？- 类的实例对象。在这里就是p1和p2
-                this.name = name;
-                this.age = age;
-            }
-            // 一般方法
-            speak() {
-                // speak方法放在了哪里？ - Person类的原型对象上，供实例使用
-                // 通过Person实例调用speak时，speak中的this就是Person实例
-                console.log(`My name is ${this.name} and age is ${this.age}`);
-            }
+      // 创建一个Person类
+      class Person {
+        // 构造器函数，用来接住实参
+        constructor(name, age) {
+          // 构造器中的this是谁？- 类的实例对象。在这里就是p1和p2
+          this.name = name;
+          this.age = age;
         }
-        // 创建一个Person实例对象
-        // const p1 = new Person('tom', 18);
-        // const p2 = new Person('jerry', 19);
-
-        // console.log(p1);
-        // console.log(p2);
-        // p1.speak();
-        // p2.speak();
-
-        // 创建一个Student类，继承于Person类
-        class Student extends Person {
-            constructor(name, age, grade) {
-                super(name, age);
-                this.grade = grade;
-            }
+        // 一般方法
+        speak() {
+          // speak方法放在了哪里？ - Person类的原型对象上，供实例使用
+          // 通过Person实例调用speak时，speak中的this就是Person实例
+          console.log(`My name is ${this.name} and age is ${this.age}`);
         }
+      }
+      // 创建一个Person实例对象
+      // const p1 = new Person('tom', 18);
+      // const p2 = new Person('jerry', 19);
 
-        const s1 = new Student('xiaozhang', 15, 'middle school');
-        console.log(s1);
+      // console.log(p1);
+      // console.log(p2);
+      // p1.speak();
+      // p2.speak();
+
+      // 创建一个Student类，继承于Person类
+      class Student extends Person {
+        constructor(name, age, grade) {
+          super(name, age);
+          this.grade = grade;
+        }
+        speak() {
+          console.log(
+            `My name: ${this.name}, my age: ${this.age}, my grade: ${this.grade}`
+          );
+        }
+        study() {
+          // study方法放在了哪里？ - Student类的原型对象上，供实例使用
+          // 通过Student实例调用study时，study中的this就是Student实例
+          console.log('I study hard');
+        }
+      }
+
+      const s1 = new Student("xiaozhang", 15, "middle school");
+      console.log(s1);
+      // s1.speak(); // 在Student中没有speak方法时，它是根据原型链来使用父类的speak方法
+      s1.speak();
+      s1.study();
     </script>
-</body>
+  </body>
 </html>
