--- a/React/06_组件实例三大属性1_state/state.html
+++ b/React/06_组件实例三大属性1_state/state.html
@@ -14,18 +14,41 @@
 <script type="text/babel">
   // 1. 创建组件
   class Weather extends React.Component {
+
     constructor(props) {
       super(props);
+      // 初始化状态
       this.state = {isHot:false};
     }
     render() {
+        // 读取状态
       const {isHot} = this.state;
-      return <h1>Today is {isHot ? 'Hot' : 'Cold'}</h1>
+        // 这里就是React如何绑定事件
+        // onClick的C是大写
+        // {}里面的demo不要后面添加小括号，需要函数 React自动帮助调用
+      return <h1 onClick={demo}>Today is {isHot ? 'Hot' : 'Cold'}</h1>
     }
   }
 
-  // 2. 渲染组件到动画
+  // 2. 渲染组件到页面
   ReactDOM.render(<Weather />, document.getElementById('test'));
+
+  // 第一种DOM
+  // const title = document.getElementById('title');
+  // title.addEventListener('click', () => {
+  //     console.log('title is clicked');
+  // })
+
+  // 第二种DOM
+  // const title = document.getElementById('title');
+  // title.onclick = () => {
+  //     console.log('title is clicked');
+  // }
+
+  function demo() {
+      // console.log('title is clicked');
+
+  }
 </script>
 </body>
 </html>
