--- a/Vue/06_数据代理/3_Vue中的数据代理.html
+++ b/Vue/06_数据代理/3_Vue中的数据代理.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-  <script type="text/javascript" src="../js/vue.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <script type="text/javascript" src="../js/vue.js"></script>
     <title>Title</title>
-</head>
-<body>
-<!--
+  </head>
+  <body>
+    <!--
     1. Vue中的数据代理:
         通过vm对象来代理data对象中属性的操作 (读/写)
     2. Vue中数据代理的好处:
@@ -16,21 +16,20 @@
         为每一个添加到vm上的属性，都制定一个getter/setter
         在getter/setter内部去操作 (读/写) data中对应的属性。
  -->
-<div id="root">
-  <h2>学校名称: {{name}}</h2>
-  <h2>Address: {{address}}</h2>
-</div>
-<script>
-  Vue.config.productionTip = false;
+    <div id="root">
+      <h2>学校名称: {{name}}</h2>
+      <h2>Address: {{address}}</h2>
+    </div>
+    <script>
+      Vue.config.productionTip = false;
 
-  const vm = new Vue({
-    el: '#root',
-    data: {
-        name: '尚硅谷123',
-        address: 'Beijing',
-    }
-  })
-
-</script>
-</body>
+      const vm = new Vue({
+        el: "#root",
+        data: {
+          name: "尚硅谷123",
+          address: "Beijing",
+        },
+      });
+    </script>
+  </body>
 </html>
