--- a/Vue/02_Vue模板语法/Vue模板语法.html
+++ b/Vue/02_Vue模板语法/Vue模板语法.html
@@ -22,11 +22,10 @@
       <br />
 
       <h1>指令语法</h1>
-      <!-- 
-    如果加了v-bind 就会把引号里面的东西当作js表达式去执行 
-    v-bind: 可以简写成 :
-  -->
-      <a v-bind:href="school.url.toUpperCase()">Click to redirect to {{school.name}} site for learning</a>
+      <!-- 如果加了v-bind 就会把引号里面的东西当作js表达式去执行v-bind: 可以简写成 : -->
+      <a v-bind:href="school.url.toUpperCase()"
+        >Click to redirect to {{school.name}} site for learning</a
+      >
       <a :href="school.url">Click to redirect to Google</a>
     </div>
     <script>
