--- a/HTML/表单/基本结构.html
+++ b/HTML/表单/基本结构.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Title</title>
+  </head>
+  <body>
+    <form action="https://www.google.com">
+      <input type="text" />
+      <button>Search</button>
+    </form>
+  </body>
 </html>
