--- a/HTML/表单/常用控件.html
+++ b/HTML/表单/常用控件.html
@@ -46,6 +46,9 @@
 
       <!-- 如果button不定义type，那么默认就是submit，就会直接提交 -->
       <!-- type定义成button，就是一个普普通通的button -->
+      <!-- 第一种写法 -->
+      <input type="button" value="检测账户是否被注册">
+      <!-- 第二种写法 -->
       <button type="button">检测账户是否被注册</button>
     </form>
   </body>
