--- a/CSS/CSS复合选择器/3_后代选择器.html
+++ b/CSS/CSS复合选择器/3_后代选择器.html
@@ -17,6 +17,16 @@
         ol li a {
             color: gray;
         }
+        .subject li {
+            color: blue;
+        }
+        .subject .front-end {
+            color: blue;
+        }
+        .subject div.front-end {
+            color: chocolate;
+        }
+        
     </style>
 </head>
 <body>
@@ -29,12 +39,18 @@
         </div>
     </ul>
     <hr>
-    <ol>
+    <ol class="subject">
+        <li id="front-end">Front end</li>
+        <div class="front-end">Learn front end</div>
         <li>e</li>
         <li>f</li>
         <li>
             <a href="#">g</a>
         </li>
     </ol>
+
+    <p>
+        <h2>nihao</h2>
+    </p>
 </body>
 </html>
