--- a/JavaScript/3_PhaseThree/9_原型/5_原型链/原型链.html
+++ b/JavaScript/3_PhaseThree/9_原型/5_原型链/原型链.html
@@ -18,6 +18,11 @@
 
     // console.log(Person.prototype.__proto__ === Object.prototype);'
 
+    console.log(ldh instanceof Person);
+    console.log(ldh instanceof Object);
+    console.log(ldh instanceof Array);
+    console.log([1,2,3] instanceof Array);
+    console.log(Array instanceof Object);
 </script>
 </body>
 </html>
