--- a/React/02_虚拟DOM的两种创建方式/2_使用js创建虚拟DOM.html
+++ b/React/02_虚拟DOM的两种创建方式/2_使用js创建虚拟DOM.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello React</title>
-  </head>
-  <body>
-    <div id="test"></div>
     <!--React核心库-->
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <!--React扩展库-->
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  </head>
+  <body>
+    <div id="test"></div>
 
     <script type="text/javascript">
       // 1. 创建虚拟DOM
-      const VDOM = React.createElement('h1', {id:'title'}, React.createElement('span', {}, 'Hello React'));    //   (标签类型, 标签属性, 标签内容)   
+      // (标签类型, 标签属性, 标签内容)
+      const VDOM = React.createElement('h1', {id:'title'}, React.createElement('span', {}, 'Hello React'));
       
       // 2. 渲染虚拟DOM到页面
       //   ReactDOM.render(虚拟DOM, 容器);
