--- a/React/02_虚拟DOM的两种创建方式/3_虚拟DOM与真实DOM.html
+++ b/React/02_虚拟DOM的两种创建方式/3_虚拟DOM与真实DOM.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello React</title>
-  </head>
-  <body>
-    <div id="test"></div>
     <!--React核心库-->
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <!--React扩展库-->
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <!--引入babel，用于将jsx转为js-->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  </head>
+  <body>
+    <div id="test"></div>
+    <div id="demo"></div>
+
     <script type="text/babel">
       // 1. 创建虚拟DOM
       const VDOM = (
@@ -19,21 +21,20 @@
           <span>Hello, React</span>
         </h1>
       );
-      // JSX创建虚拟DOM就是原始JS创建虚拟DOM的一种语法糖
 
-      // 2. 渲染虚拟DOM到页面
-      //   ReactDOM.render(虚拟DOM, 容器);
       ReactDOM.render(VDOM, document.getElementById("test"));
 
-      let TDOM = document.getElementById("test");
+      let TDOM = document.getElementById("demo");
       console.log("虚拟DOM", VDOM);
+      // console.log(typeof VDOM);
+      // console.log(VDOM instanceof Object);
       console.log("真实DOM", TDOM);
-      debugger;
+      // debugger;
 
       /*
-        关于虚拟DOM: 
+        关于虚拟DOM:
             1. 本质是Object类型的对象(一般对象)
-            2. 虚拟DOM比较“轻”，真实DOM比较“重”也就是属性很多，因为虚拟DOM是React内部在用，无需真实DOM上那么多的属性。
+            2. 虚拟DOM比较“轻”，属性比较少，真实DOM比较“重”也就是属性很多，因为虚拟DOM是React内部在用，无需真实DOM上那么多的属性。
             3. 虚拟DOM最终会被React转化为真实DOM，呈现在页面上。
       */
     </script>
