--- a/React/03_jsx语法规则/jsx语法规则.html
+++ b/React/03_jsx语法规则/jsx语法规则.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello React</title>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <style>
       .title {
         background-color: orange;
@@ -11,14 +14,12 @@
     </style>
   </head>
   <body>
-    <div id="test"></div>
+    <div id="test">
 
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    </div>
 
     <script type="text/babel">
-      const myId = "aTUiGu";
+      const myId = "test";
       const myData = "HeLlo, rEaCt";
 
       // 1. 创建虚拟DOM
@@ -37,7 +38,6 @@
           <input type="text"/>
           <Good>123</Good>
         </div>
-        
       );
 
       // 2. 渲染虚拟DOM到页面
