--- a/React/04_jsx的小练习/jsx小练习.html
+++ b/React/04_jsx的小练习/jsx小练习.html
@@ -14,21 +14,6 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <script type="text/babel">
-    /**
-        一定注意区分: [js语句(代码)]与[js表达式]
-            1. 表达式: 一个表达式会产生一个值，可以放在任何一个需要值的地方
-                下面这些都是表达式:
-                    (1) a
-                    (2) a + b
-                    (3) demo(1) 函数调用表达式
-                    (4) arr.map()
-                    (5) function test() {}
-            2. 语句(代码)
-                下面这些都是语句(代码)
-                    (1) if() {}
-                    (2) for() {}
-                    (3) switch() {case:xxxx}
-     */
   const data = ['Angular', 'React', 'Vue'];
 
   const VDOM = (
@@ -37,6 +22,8 @@
       <ul>
           {
             data.map((item, index) => {
+                // li应该分别分配key，unique的。
+                // map遍历第二个参数是索引值
                 return <li key="index">{item}</li>
             })
           }
@@ -44,7 +31,6 @@
     </div>
   )
 
-  // 渲染虚拟DOM到页面
   ReactDOM.render(VDOM, document.getElementById('test'));
 </script>
 </body>
