--- a/React/复习/2_原生事件绑定.html
+++ b/React/复习/2_原生事件绑定.html
@@ -9,19 +9,19 @@
 <button id="btn2">Button2</button>
 <button onclick="demo()">Button3</button>
 
-<script !src="">
-  const btn1 = document.getElementById('btn1');
-  btn1.addEventListener('click', () => {
-    alert('button1 is clicked');
-  });
-  const btn2 = document.getElementById('btn2');
-  btn2.addEventListener('click', () => {
-    alert('button2 is clicked');
-  });
+<script>
+    const btn1 = document.getElementById('btn1');
+    btn1.addEventListener('click', () => {
+        alert('button1 is clicked');
+    });
+    const btn2 = document.getElementById('btn2');
+    btn2.addEventListener('click', () => {
+        alert('button2 is clicked');
+    });
 
-  function demo() {
-    alert('button3 is clicked');
-  }
+    function demo() {
+        alert('button3 is clicked');
+    }
 </script>
 </body>
 </html>
