--- a/React/06_组件实例三大属性1_state/state.html
+++ b/React/06_组件实例三大属性1_state/state.html
@@ -12,43 +12,25 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <script type="text/babel">
-  // 1. 创建组件
-  class Weather extends React.Component {
-
-    constructor(props) {
-      super(props);
-      // 初始化状态
-      this.state = {isHot:false};
+    // 1. 创建类式组件
+    class Weather extends React.Component {
+        constructor(props) {
+            super(props);
+            this.state = {isHot: true}; // 这里写成一个对象，因为官方要求的state写成对象
+        }
+        render() {
+            console.log(this); // 这个this就是Weather的组件实例对象
+            return <h1 onClick={this.changeWeather}>今天天气很 {this.state.isHot ? "炎热" : "凉爽"}</h1>
+        }
+        // changeWeather放在哪里？类的原型对象上，供实例使用
+        // 通过Weather实例调用changeWeather时，changeWeather中的this就是Weather实例
+        changeWeather() {
+            console.log(this.state.isHot);
+        }
     }
-    render() {
-        // 读取状态
-      const {isHot} = this.state;
-        // 这里就是React如何绑定事件
-        // onClick的C是大写
-        // {}里面的demo不要后面添加小括号，需要函数 React自动帮助调用
-      return <h1 onClick={demo}>Today is {isHot ? 'Hot' : 'Cold'}</h1>
-    }
-  }
 
-  // 2. 渲染组件到页面
-  ReactDOM.render(<Weather />, document.getElementById('test'));
-
-  // 第一种DOM
-  // const title = document.getElementById('title');
-  // title.addEventListener('click', () => {
-  //     console.log('title is clicked');
-  // })
-
-  // 第二种DOM
-  // const title = document.getElementById('title');
-  // title.onclick = () => {
-  //     console.log('title is clicked');
-  // }
-
-  function demo() {
-      // console.log('title is clicked');
-
-  }
+    // 2. 渲染组件到页面
+    ReactDOM.render(<Weather />, document.getElementById('test'));
 </script>
 </body>
 </html>
