simplify the state keyword usage

--- a/React/06_组件实例三大属性1_state/state.html
+++ b/React/06_组件实例三大属性1_state/state.html
@@ -12,6 +12,13 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script type="text/babel">
+      /**
+       * 这里注意一个情况。构造器中的this，指向的是Weather类的组件实例对象。render中的this也指向的是Weather类的组件实例对象。
+       * 但是changeWeather方法中的this是没有指向Weather类的组件实例对象，因为Weather类的组件实例对象是通过在‘渲染组件到页面‘部分的<Weather />使得React
+       * 自动帮助生成实例对象的，例如，生成了w1 = new Weather();所以构造器和render中的this就是‘w1.’调用的。changeWeather是作为事件的回调在使用，而同时
+       * 由于类中的方法开了严格模式，导致changeWeather中的this丢了。
+       */
+
       // 1. 创建类式组件
       class Weather extends React.Component {
         //构造器调用几次? 在渲染组件部份只使用了一次<Weather />
@@ -19,7 +26,7 @@
           super(props);
           this.state = {
             isHot: false,
-            wind: '微风',
+            wind: "微风",
           }; // 这里写成一个对象，因为官方要求的state写成对象
           /**
            * changeWeather可以找到因为changeWeather在Weather的原型上
@@ -31,7 +38,7 @@
 
         // render调用几次? 1 + n次 = 1是初始化那次 n是状态更新的次数
         render() {
-          console.log('render')
+          console.log("render");
           const { isHot } = this.state;
           // return语句的changeWeather就是25行的等号左边的changeWeather
           return (
@@ -50,10 +57,10 @@
           // 获取原来的isHot值
           const isHot = this.state.isHot;
           // 严重注意: 状态必须通过setState进行更新，且更新是一种合并，不是替换
-          this.setState({isHot:!isHot});
-          
+          this.setState({ isHot: !isHot });
+
           // 注意: 状态(state)不可直接更改，下面这行就是直接更改
-        //   this.state.isHot = !isHot; // 这是错误的写法
+          //   this.state.isHot = !isHot; // 这是错误的写法
         }
       }
 
