--- a/React/复习/1_类的基本知识.html
+++ b/React/复习/1_类的基本知识.html
@@ -53,6 +53,21 @@
       // s1.speak(); // 在Student中没有speak方法时，它是根据原型链来使用父类的speak方法
       s1.speak();
       s1.study();
+
+      class Car {
+        constructor(name, price) {
+          this.name = name;
+          this.price = price;
+          // this.wheel = 4;
+        }
+        // 类中可以直接写赋值语句，如下代码的含义是: 给Car的实例对象添加一个属性，名为a，值为1
+        a = 1;
+        wheel = 4
+      }
+      const c1 = new Car("jack", 12);
+      const c2 = new Car("mark", 10);
+      console.log(c1);
+      console.log(c2);
     </script>
   </body>
 </html>
