--- a/Vue/02_Vue模板语法/Vue模板语法.html
+++ b/Vue/02_Vue模板语法/Vue模板语法.html
@@ -10,7 +10,7 @@
       Vue模板语法有两大类:
         1. 插值语法: 
           功能: 用于解析标签体内容
-          写法: {{xxx}}, xxx是s表达式，且可以直接读取到data中的所有属性
+          写法: {{xxx}}, xxx是表达式，且可以直接读取到data中的所有属性
         2. 指令语法: 
           功能: 用于解析标签
           举例: v-bind:href="xxx" 或 简写为 :href="xxx", xxx同样要写js表达式，且可以直接读取到data中的所有属性
