--- a/Vue/08_计算属性/4_姓名案例_计算属性简写.html
+++ b/Vue/08_计算属性/4_姓名案例_计算属性简写.html
@@ -22,19 +22,6 @@
       },
       methods: {},
       computed: {
-        // 完整写法
-        // fullName: {
-        //     get() {
-        //         console.log('get is called');
-        //         return this.firstName + '-' + this.lastName;
-        //     },
-        //     set(value) {
-        //         console.log('set', value);
-        //         const arr = value.split('-');
-        //         this.firstName = arr[0];
-        //         this.lastName = arr[1];
-        //     }
-        // }
 
         // 简写, 注意: 只考虑读取，不考虑修改的时候才可以使用简写形式，因为它基本就是getter的内容
         // 当作getter用
@@ -49,6 +36,11 @@
         //     return this.firstName + "-" + this.lastName;
         //   }, 1000);
         },
+
+        // fullName: function() {
+        //   console.log("get被调用了");
+        //   return this.firstName + "-" + this.lastName;
+        // }
       },
     });
   </script>
