--- a/JavaScript/1_PhaseOne/5_Functions/immediateFunction.html
+++ b/JavaScript/1_PhaseOne/5_Functions/immediateFunction.html
@@ -7,13 +7,16 @@
 </head>
 <body>
     <script>
-        // 立即执行函数
-        // 作用: 防止变量污染
-        // 需要调用吗? 不需要调用，立即执行，其实本质已经调用了
-        // 多个立即执行函数之间用分号隔开
+        /**
+         * 立即执行函数
+         * 作用: 防止变量污染
+         * 需要调用吗? 不需要调用，立即执行，其实本质已经调用了
+         * 多个立即执行函数之间用分号隔开
+        */
         (function () {
             let num = 10;
         })(); // 分号前面的小括号就是调用函数, 所以里面的参数是实参
+
         (function () {
             let num = 20;
         })(); 
