bom content update

--- a/JavaScript/2_PhaseTwo/BOM/1_BOM/1_bom.html
+++ b/JavaScript/2_PhaseTwo/BOM/1_BOM/1_bom.html
@@ -8,10 +8,10 @@
 <script>
     console.log(document === window.document);
     function fn() {
-        console.log(11);
+        console.log(11); 
     }
-    window.fn();
-    let num = 10;
+    fn();
+    var num = 10;
     console.log(window.num);
 </script>
 </body>
