--- a/JavaScript/2_PhaseTwo/BOM/1_BOM/3_5秒自动关闭的广告.html
+++ b/JavaScript/2_PhaseTwo/BOM/1_BOM/3_5秒自动关闭的广告.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-  <style>
-    img {
-      position: fixed;
-      left: 0;
-      bottom: 0;
-    }
-  </style>
-</head>
-<body>
-<img src="images/ad.png" alt="">
-<script>
-  const img = document.querySelector('img');
-  setTimeout(function() {
-    img.style.display = 'none';
-  }, 3000);
-</script>
-</body>
+    <style>
+      img {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="images/ad.png" alt="" />
+    <script>
+      // 获取元素
+      const img = document.querySelector("img");
+      setTimeout(function () {
+        img.style.display = "none";
+      }, 3000);
+    </script>
+  </body>
 </html>
