location object, navigator object

--- a/JavaScript/2_PhaseTwo/BOM/1_BOM/6_5秒钟之后自动跳转页面.html
+++ b/JavaScript/2_PhaseTwo/BOM/1_BOM/6_5秒钟之后自动跳转页面.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-</head>
-<body>
-<a href="http://www.itcast.cn">支付成功<span>5</span></a>
-<script>
-  // 1. 获取元素
-  const a = document.querySelector('a');
-  // 2. 开启定时器
-  // 3. 声明倒计时变量
-  let num = 5;
-  let timerId = setInterval(function() {
-    num--;
-    a.innerHTML = '支付成功<span>${num}</span>秒钟之后跳转到首页';
-    // 如果num === 0 则停止计时器，并且完成跳转功能
-    if (num === 0) {
-      clearInterval(timerId);
-      // 4. 跳转 location.href
-      location.href = 'http://www.itcast.cn';
-    }
-  }, 1000);
-</script>
-</body>
+  </head>
+  <body>
+    <a href="http://www.itcast.cn">支付成功<span>5</span></a>
+    <script>
+      // 1. 获取元素
+      const a = document.querySelector("a");
+      // 2. 开启定时器
+      // 3. 声明倒计时变量
+      let num = 5;
+      let timerId = setInterval(function () {
+        num--;
+        a.innerHTML = `支付成功<span>${num}</span>秒钟之后跳转到首页`;
+        // 如果num === 0 则停止计时器，并且完成跳转功能
+        if (num === 0) {
+          clearInterval(timerId);
+          // 4. 跳转 location.href
+          location.href = "http://www.itcast.cn";
+        }
+      }, 1000);
+    </script>
+  </body>
 </html>
