--- a/JavaScript/2_PhaseTwo/BOM/1_BOM/5_locationObject.html
+++ b/JavaScript/2_PhaseTwo/BOM/1_BOM/5_locationObject.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-</head>
-<body>
-<form action="">
-  <input type="text" name="username">
-  <input type="password" name="pwd">
-  <button>Submit</button>
-</form>
+  </head>
+  <body>
+    <form action="">
+      <input type="text" name="username" />
+      <input type="password" name="pwd" />
+      <button>Submit</button>
+    </form>
 
-<a href="#/my">我的</a>
-<a href="#/friend">关注</a>
-<a href="#/download">下载</a>
-<button class="reload">刷新</button>
-<script>
-  // console.log(window.location);
-  // console.log(location);
-  // console.log(location.href);
-  // 1. href 经常用href 利用js的方法去跳转页面
-  // location.href = 'http://google.com';
+    <a href="#/my">我的</a>
+    <a href="#/friend">关注</a>
+    <a href="#/download">下载</a>
+    <button class="reload">刷新</button>
+    <script>
+      // console.log(window.location);
+      // console.log(location);
+      // console.log(location.href);
+      // 1. href 经常用href 利用js的方法去跳转页面
+      // location.href = 'http://google.com';
 
-  const reload = document.querySelector('.reload');
-  reload.addEventListener('click', function() {
-    // f5刷新
-    // location.reload();
-    // true 强制刷新
-    location.reload(true);
-  })
-</script>
-</body>
+      const reload = document.querySelector(".reload");
+      reload.addEventListener("click", function () {
+        // f5刷新
+        // location.reload();
+        // true 强制刷新
+        location.reload(true);
+      });
+    </script>
+  </body>
 </html>
