update on the Vue project content

--- a/Vue/03_数据绑定/数据绑定.html
+++ b/Vue/03_数据绑定/数据绑定.html
@@ -26,7 +26,7 @@
         new Vue({
             el: '#root',
             data: {
-                name: '尚硅谷',
+                name: '前端开发',
             }
         })
     </script>
